--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,10 +9,10 @@
     <meta name="author" content="">
    
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/fonts.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='skeleton/css/normalize.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='skeleton/css/skeleton.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Skeleton/css/normalize.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Skeleton/css/skeleton.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}">
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='skeleton/images/favicon.png') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='Skeleton/images/favicon.png') }}">
 
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-2.1.4.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.form-validator.min.js') }}"></script>
