--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1,5 +1,5 @@
 /*
-* v0.0.6
+* v0.1.0
 * Copyright 2016, Pavel Mamontov 
 * pavelmamontov.com
 * Free to use under the MIT license.
@@ -11,6 +11,7 @@
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
 - General
+- Style Guide
 - Alerts 
 - Images
 - Layout 
@@ -18,6 +19,7 @@
 - Progress Bar
 - Input
 - Tables
+- Code
 - Animations
 */
 
@@ -175,9 +177,12 @@ small {
 
 /* Navigation 
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.nav-container {
+.nav-tabs-container {
     border-bottom: 1px solid #eee;
     margin-bottom: 1em;
+}
+.nav-stacked-container {
+    position: fixed;
 }
 .nav {
     padding-left: 0;
@@ -210,17 +215,21 @@ small {
     background-color: transparent;
 }
 .nav-stacked {
-    text-align: right;
     width: 100%;
 }
 .nav-tabs > li {
     float: left;
     margin-bottom: -3px;
 }
-.nav-tabs > li > a,
-.nav-stacked > li > a {
+.nav-tabs > li > a {
     line-height: 2.8;
     height: 4.5rem;
+    text-decoration: none;
+}
+
+.nav-stacked > li > a {
+    line-height: 1.8;
+    height: 2.5rem;
     text-decoration: none;
 }
 .nav-tabs > li > a:hover
@@ -243,8 +252,8 @@ small {
     margin-right: 0;
     margin-left: 0;
     background-color: #fff;
-    border-right-style: solid;
-    border-right-color: #1EAEDB;
+    border-left-style: solid;
+    border-left-color: #1EAEDB;
 }
 .nav-tabs.nav-horizontal > li.active > a,
 .nav-tabs.nav-horizontal > li.active > a:hover,
@@ -558,6 +567,18 @@ td code {
     table.responsive td:nth-of-type(6):before { content: "Zip"; }
 }
 */
+
+/* Code 
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+pre {
+    padding: 10px 0 10px 15px;
+    color: #fff;
+    background-color: #222;
+    overflow-x: auto;
+    font-size: small;
+    text-align: left;
+    border-radius: 4px;
+}
 
 /* Animations
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
