--- a/app/templates/helpers/navigation.html
+++ b/app/templates/helpers/navigation.html
@@ -49,7 +49,23 @@
         <li {% if active_section == "styleguide_grid_system" %}class="active"{% endif %}>
             <a href="{{ url_for('styleguide.grid_system') }}">Grid System</a>
         </li>
+        <li {% if active_section == "styleguide_typography" %}class="active"{% endif %}>
+            <a href="{{ url_for('styleguide.typography') }}">Typography</a>
+        </li>
+        <li {% if active_section == "styleguide_forms" %}class="active"{% endif %}>
+            <a href="{{ url_for('styleguide.forms') }}">Forms</a>
+        </li>
     </ul>
     <span class="u-cf"></span>
+</div>
+{% endmacro %}
+
+<!-- The scrollspy is populated automatically. Each section of a page that needs
+to appear in this menu needs to have the following markup:
+    <h3 class="scrollspy-section"><a id="some-section-id"></a>Some Section</h3>
+-->
+{% macro render_scrollspy() %}
+<div class="nav-stacked-container">
+    <ul id="nav-submenu" class="nav nav-stacked nav-secondary u-pull-right"></ul>
 </div>
 {% endmacro %}
