--- a/app/templates/styleguide/index.html
+++ b/app/templates/styleguide/index.html
@@ -25,10 +25,10 @@
     <div class="nine columns">
 
         <h2>About</h2>
-        <p>This style guide is here to help new and current developers to keep the UI consistent.</p>
+        <p>This style guide is here to help new and current developers to keep the UI consistent. If you modify the styles, pease update this guide.</p>
         <p>Currently for frontend development we're using:</p>
         <ul>
-            <li><a href="http://getskeleton.com/" target="_blank">Skelton</a> CSS boilerplate.</a></li>
+            <li><a href="http://getskeleton.com/" target="_blank">Skeleton</a> CSS boilerplate.</a></li>
             <li><a href="https://useiconic.com/open" target="_blank">Open Iconic</a> icons</a></li>
             <li>A few custom social media svg icons</li>
             <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a> templating engine.</a></li>
