--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -86,6 +86,7 @@
                     <h4>Help</h4>
                     <ul>
                         <li><a href="#">FAQ</a></li>
+                        <li><a href="{{ url_for('styleguide.styleguide') }}">Styleguide</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
