--- a/app/templates/styleguide/typography.html
+++ b/app/templates/styleguide/typography.html
@@ -119,6 +119,77 @@ Est et ad rem unde a commodi. [...]&lt;/p&gt;
 &lt;-- A small paragraph with a more subdued color --&gt;
 &lt;p&gt;&lt;small&gt;&lt;strong&gt;Small size&lt;/strong&gt;&lt;br&gt;
 A et tenetur at non quo vitae eveniet. [...]&lt;/p&gt;</pre>
+        <hr>
+
+        <h3 class="scrollspy-section"><a id="lists"></a>Lists</h3>
+        <p>Unoredered lists have a circle decoration by default. Nesting for more that 2 levels is not currently supported.</p>
+        <div class="row">
+            <div class="one-half column">
+                <p><strong>Unordered list:</strong></p>
+                <ul>
+                    <li>Item 1</li>
+                    <li>Item 2
+                        <ul>
+                            <li>Subitem 1</li>
+                            <li>Subitem 2</li>
+                        </ul>
+                    </li>
+                    <li>Item 3</li>
+                </ul>
+            </div>
+            <div class="one-half column">
+                <p><strong>Ordered list:</strong></p>
+                <ol>
+                    <li>Item 1</li>
+                    <li>Item 2
+                        <ol>
+                            <li>Subitem 1</li>
+                            <li>Subitem 2</li>
+                        </ol>
+                    </li>
+                    <li>Item 3</li>
+                </ol>
+            </div>
+        </div>
+        <pre>
+&lt;div class="row"&gt;
+    &lt;div class="one-half column"&gt;
+        &lt;p&gt;&lt;strong&gt;Unordered list:&lt;/strong&gt;&lt;/p&gt;
+        &lt;ul&gt;
+            &lt;li&gt;Item 1&lt;/li&gt;
+            &lt;li&gt;Item 2
+                &lt;ul&gt;
+                    &lt;li&gt;Subitem 1&lt;/li&gt;
+                    &lt;li&gt;Subitem 2&lt;/li&gt;
+                &lt;/ul&gt;
+            &lt;/li&gt;
+            &lt;li&gt;Item 3&lt;/li&gt;
+        &lt;/ul&gt;
+    &lt;/div&gt;
+    &lt;div class="one-half column"&gt;
+        &lt;p&gt;&lt;strong&gt;Ordered list:&lt;/strong&gt;&lt;/p&gt;
+        &lt;ol&gt;
+            &lt;li&gt;Item 1&lt;/li&gt;
+            &lt;li&gt;Item 2
+                &lt;ol&gt;
+                    &lt;li&gt;Subitem 1&lt;/li&gt;
+                    &lt;li&gt;Subitem 2&lt;/li&gt;
+                &lt;/ol&gt;
+            &lt;/li&gt;
+            &lt;li&gt;Item 3&lt;/li&gt;
+        &lt;/ol&gt;
+    &lt;/div&gt;
+&lt;/div&gt;</pre>
+        <hr>
+
+        <h3 class="scrollspy-section"><a id="code"></a>Code</h3>
+        <p>Code styling is basic, without any bells and whistles. For inline code wrap text in the <code>&lt;code&gt;</code> tag. For block code, use the <code>&lt;pre&gt;</code> tag, which will preserve indentation and white space. The <code>&lt;</code> and <code>&gt;</code> characters have to be represented using ASCII codes <code>&amp;lt;</code> and <code>&amp;gt;</code> respectively.</p>
+        <pre>
+&lt;pre&gt;
+.example-class {
+    background-color: #000;
+}&lt;pre&gt;</pre>
+
     </div>
 
     <div class="three columns">
