--- a/app/templates/helpers/navigation.html
+++ b/app/templates/helpers/navigation.html
@@ -1,3 +1,8 @@
+<!-- If you add another macro to this file or significatly edit an existing one, 
+dont' forget to add a description of your changes to the appropriate styleguide
+section (app/templates/styleguide/templating.html#navigation-helpers)
+-->
+
 {% macro render_cause_nav(active_section, new_updates, new_comments) %}
 <div class="nav-tabs-container">
     <ul class="nav nav-tabs nav-horizontal u-pull-left">
