--- a/app/templates/styleguide/forms.html
+++ b/app/templates/styleguide/forms.html
@@ -173,7 +173,7 @@
 &lt;/div&gt;</pre>
         <hr>
         
-        <h3 class="scrollspy-section"><a id="radio-buttons-and-checkboxes"></a>Radio Buttons &amp; Checkboxes</h3>
+        <h3 class="scrollspy-section"><a id="radio-and-checkboxes"></a>Radio &amp; Checkboxes</h3>
         <p>Radio buttons and checkboxes are rendered by putting the <code>&lt;input&gt;</code> tag inside the <code>&lt;label&gt;</code> tag. This is done so clicking on the label can activate the radio/checkbox.</p>
         <div class="row">
             <div class="one-half column">
